test/error/iface/err4.rzy
component
  Sub
    signal funcA();
    signal funcB();
      
  implementation elementary
  end

  Err4
    signal funcA();
    signal funcB();
    signal funcC();
      
  implementation composition
    
    component
      a : Sub;

    connection
      a.funcA -> funcA;
      a.funcB -> funcB;
      a.funcC -> funcC;
    
  end

